First version of project cards, little fix of footer (now it has z-index 999)

--- a/TranslationReg/Style/style.less
+++ b/TranslationReg/Style/style.less
@@ -35,6 +35,7 @@ footer {
     padding: 15px;
     color: white;
     background: @dark-color;
+    z-index:999;
 }
 
 .navbar-brand {
